Initial release: RTPMI Observatory v9.0.0
